EXTENSION_ID = gnomenu

EXTRA_MODULES =			\
	convenience.js		\
	placeDisplay.js		\
	prefs.js		\
	webChromium.js		\
	webEpiphany.js		\
	webFirefox.js		\
	webGoogleChrome.js	\
	webMidori.js		\
	webOpera.js		\
	workspaceThumbnail.js

include ../../extension.mk
include ../../settings.mk

mediadir = $(extensiondir)/icons

dist_media_DATA = \
	icons/control-center-alt-symbolic.svg		\
	icons/gnomenu-go-previous-symbolic.svg		\
	icons/refresh-symbolic.svg			\
	icons/shutdown-symbolic.svg			\
	icons/start-here-archlinux-symbolic.svg		\
	icons/start-here-debian-symbolic.svg		\
	icons/start-here-elementary-symbolic.svg	\
	icons/start-here-fedora-symbolic.svg		\
	icons/start-here-frugalware-symbolic.svg	\
	icons/start-here-gentoo-symbolic.svg		\
	icons/start-here-gnome-symbolic.svg		\
	icons/start-here-linux-mint-symbolic.svg	\
	icons/start-here-mandriva-symbolic.svg		\
	icons/start-here-opensuse-symbolic.svg		\
	icons/start-here-slackware-symbolic.svg		\
	icons/start-here-ubuntu-symbolic.svg		\
	icons/suspend-symbolic.svg			\
	icons/user-lock-symbolic.svg			\
	icons/user-logout-symbolic.svg			\
	icons/view-filter-symbolic.svg			\
	icons/view-grid-symbolic.svg			\
	icons/view-list-symbolic.svg			\
	icons/view-toggle-apps-symbolic.svg

themedir = $(extensiondir)/themes/default
dist_theme_DATA	= \
	themes/default/gnomenu-m.css 			\
	themes/default/gnomenu-s.css


